testsuite/tests/typecheck/should_fail/T7851.stderr
T7851.hs:5:10: error: [GHC-83865]
    • Couldn't match expected type: IO a0
                  with actual type: a1 -> IO ()
    • Probable cause: ‘print’ is applied to too few arguments
      In the expression: print
      In the expression:
        do print
           print "Hello"
      In an equation for ‘bar’:
          bar
            = do print
                 print "Hello"

